--- a/src/default/index.scss
+++ b/src/default/index.scss
@@ -8,6 +8,7 @@
 @use 'color.default' as *;
 @use 'media-queries.default' as *;
 @use 'grid.default' as *;
+@use 'reset' as *;
 @use 'sass:map';
 @use '../../lib/sass-door' as *;
 
