--- a/src/default/_reset.scss
+++ b/src/default/_reset.scss
@@ -56,6 +56,31 @@
     line-height: var(--lh0);
   }
 
+  @include build-utility-classes();
+  @include build-type-elements();
+  @include build-input-elements();
+}
+
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+///
+/// @group reset
+///
+@mixin build-utility-classes() {
+  .txt-error {
+    color: var(--clr-txt-error);
+  }
+
+  .bg-disabled {
+    background-color: var(--clr-bg-disabled);
+    cursor: not-allowed;
+  }
+}
+
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+///
+/// @group reset
+///
+@mixin build-type-elements() {
   h1,
   h2,
   h3,
@@ -68,44 +93,11 @@
 
   a {
     color: var(--clr-txt-personality);
+    cursor: pointer;
+
     &:hover {
       color: var(--clr-txt-personality);
     }
-  }
-
-  input {
-    display: block;
-    background-color: var(--clr-bg-input);
-    -webkit-text-fill-color: var(--clr-txt-base);
-
-    &:invalid {
-      background-color: var(--clr-bg-error);
-    }
-  }
-
-  input[type='button'],
-  input[type='image'],
-  input[type='reset'],
-  input[type='submit'],
-  button,
-  a {
-    cursor: pointer;
-  }
-
-  main {
-    > header,
-    > footer {
-      background-color: var(--clr-bg-panel);
-    }
-  }
-
-  .txt-error {
-    color: var(--clr-txt-error);
-  }
-
-  .bg-disabled {
-    background-color: var(--clr-bg-disabled);
-    cursor: not-allowed;
   }
 
   p {
@@ -153,5 +145,44 @@
   h1 {
     font-size: #{var(--fs6)};
     line-height: #{var(--lh6)};
+  }
+}
+
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+///
+/// @group reset
+///
+@mixin build-input-elements() {
+  input {
+    display: inline-block;
+    width: 100%;
+    background-color: var(--clr-bg-input);
+    -webkit-text-fill-color: var(--clr-txt-base);
+
+    &:invalid {
+      background-color: var(--clr-bg-error);
+    }
+  }
+
+  input[type='button'],
+  input[type='image'],
+  input[type='reset'],
+  input[type='submit'] {
+    max-width: max-content;
+  }
+
+  input[type='button'],
+  input[type='image'],
+  input[type='reset'],
+  input[type='submit'],
+  button {
+    cursor: pointer;
+  }
+
+  main {
+    > header,
+    > footer {
+      background-color: var(--clr-bg-panel);
+    }
   }
 }
