--- a/src/_size.scss
+++ b/src/_size.scss
@@ -51,11 +51,12 @@ $box-spaces: (
   two-thirds: 0.6666666666,
   three-quarters: 0.75,
   seven-eights: 0.875,
-  base: 1,
+  single: 1,
   one-and-half: 1.5,
   double: 2,
   triple: 3,
   quadruple: 4,
+  fifteen: 20,
 ) !default;
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
