--- a/src/default/_grid.default.scss
+++ b/src/default/_grid.default.scss
@@ -21,10 +21,10 @@
 ///
 $grid-schemas: (
     cols: 6,
-    gutter: 0.8503100088em,
+    gutter: 0.8503100088rem,
     colwidth: 0,
     width: auto,
-    margin: 0.8503100088em,
+    margin: 0.8503100088rem,
     mq: only-on($breakpoints, sm),
   ),
   (
