--- a/src/_color.scss
+++ b/src/_color.scss
@@ -95,7 +95,7 @@
 
     //  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -
     $hex-border: $hex-txt-base;
-    --clr-border: #{$hex-border};
+    // --clr-border: #{$hex-border};
 
     //  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -
     $hex-txt-error: list.nth(
